fix: wrap long link urls to fill the line

--- a/src-web/src/styles/_editor-content.css
+++ b/src-web/src/styles/_editor-content.css
@@ -183,7 +183,7 @@
   }
 
   a {
-    @apply text-accent cursor-pointer underline;
+    @apply text-accent cursor-pointer break-all underline;
   }
 
   hr {
